--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=dev nodemon index.js"
+    "start": "NODE_ENV=dev nodemon --harmony index.js"
   },
   "repository": {
     "type": "git",
@@ -23,16 +23,14 @@
   },
   "homepage": "https://github.com/M-E-W-B/looplr#readme",
   "dependencies": {
-    "apollo-errors": "^1.8.0",
-    "apollo-server-express": "^1.3.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "graphql": "^0.13.2",
-    "graphql-iso-date": "^3.5.0",
-    "graphql-tools": "^2.24.0",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.14.6",
+    "lodash": "^4.17.11",
+    "method-override": "^3.0.0",
     "mysql": "^2.15.0"
   }
 }
