--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.14.6",
     "lodash": "^4.17.11",
