--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic implementation of an e-commerce service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test mocha --harmony --timeout 10000",
     "start": "NODE_ENV=dev nodemon --harmony index.js"
   },
   "repository": {
@@ -31,8 +31,13 @@
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.14.6",
-    "lodash": "^4.17.11",
+    "lodash.camelcase": "^4.3.0",
     "method-override": "^3.0.0",
     "mysql": "^2.15.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "mocha": "^6.0.2"
   }
 }
