--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.14.6",
     "lodash.camelcase": "^4.3.0",
+    "lodash.get": "^4.4.2",
+    "lodash.has": "^4.5.2",
+    "lodash.set": "^4.3.2",
     "method-override": "^3.0.0",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
