--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "knex": "^0.14.6",
     "lodash.camelcase": "^4.3.0",
     "lodash.get": "^4.4.2",
+    "lodash.groupby": "^4.6.0",
     "lodash.has": "^4.5.2",
     "lodash.set": "^4.3.2",
     "method-override": "^3.0.0",
